--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="col-lg-6">
                         <div class="text-center my-5">
                             <h1 class="display-5 fw-bolder text-white mb-2">안녕하세요 실험용 서버에 오신것을 환영할까요?</h1>
-                            <p class="lead text-white-50 mb-4">ㅂㅊㅎ이 만들었어</p>
+                            <p class="lead text-white-50 mb-4">ㅂㅊㅎ</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                 <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
